--- a/index.html
+++ b/index.html
@@ -340,7 +340,84 @@
     <button onclick="copyText('textArea24')">Copy</button>
 </div> 
 
+ <div class="container">
+        <h3>SUCK DICK</h3>
+        <textarea id="textArea25" readonly>
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░█▀▀░█░█░█▀▀░█░█░░░░░░░░░░░▀▀█░█░█░█░░░██▀░░░░░░░░░░░▀▀▀░▀▀▀░▀▀▀░▀░▀░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░█▀▄░▀█▀░█▀▀░█░█░░░░░░░░░░░█░█░░█░░█░░░██▀░░░░░░░░░░░▀▀░░▀▀▀░▀▀▀░▀░▀░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
 
+        </textarea>
+        <button onclick="copyText('textArea25')">Copy</button>
+    </div> 
+<div class="container">
+        <h3>BEAR</h3>
+        <textarea id="textArea26" readonly>
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▄▄░░░░░░▄▄▄▄░░░░░░░░░░░░▐▀▀▄█▀▀▀▀▀▒▄▒▀▌░░░░░░░░░░░▐▒█▀▒▒▒▒▒▒▒▒▀█░░░░░░░░░░░░░█▒▒▒▒▒▒▒▒▒▒▒▀▌░░░░░░░░░░░░▌▒██▒▒▒▒██▒▒▒▐░░░░░░░░░░░░▌▒▒▄▒██▒▄▄▒▒▒▐░░░░░░░░░░░▐▒▒▒▀▄█▀█▄▀▒▒▒▒█▄░░░░░░░░░▀█▄▒▒▐▐▄▌▌▒▒▄▐▄▐░░░░░░░░░▄▀▒▒▄▒▒▀▀▀▒▒▒▒▀▒▀▄░░░░░░░░█▒▀█▀▌▒▒▒▒▒▄▄▄▐▒▒▐░░░░░░░░░▀▄▄▌▌▒▒▒▒▐▒▒▒▀▒▒▐░░░░░░░░░░░░░▐▌▒▒▒▒▀▄▄▄▄▄▀░░░░░░░░░░░░░░▐▄▒▒▒▒▒▒▒▒▐░░░░░░░░░░░░░░░▌▒▒▒▒▄▄▒▒▒▐░░░░░
+
+        </textarea>
+        <button onclick="copyText('textArea26')">Copy</button>
+    </div> 
+    
+    <div class="container">
+        <h3>SUPER MARIO</h3>
+        <textarea id="textArea27" readonly>
+▒▒▒▒▒▒▒▒▒▒▒▒▄▄▄▄▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▀▀▓▓▓▀█▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▀▓▓▄██████▄▒▒▒▒▒▒▒▒▒▒▒▒▒▄█▄█▀░░▄░▄░█▀▒▒▒▒▒▒▒▒▒▒▒▒▄▀░██▄░░▀░▀░▀▄▒▒▒▒▒▒▒▒▒▒▒▒▀▄░░▀░▄█▄▄░░▄█▄▒▒▒▒▒▒▒▒▒▒▒▒▒▀█▄▄░░▀▀▀█▀▒▒▒▒▒▒▒▒▒▒▒▒▒▒▄▀▓▓▓▀██▀▀█▄▀▀▄▒▒▒▒▒▒▒▒▒▒█▓▓▄▀▀▀▄█▄▓▓▀█░█▒▒▒▒▒▒▒▒▒▒▀▄█░░░░░█▀▀▄▄▀█▒▒▒▒▒▒▒▒▒▒▒▒▄▀▀▄▄▄██▄▄█▀▓▓█▒▒▒▒▒▒▒▒▒▒█▀▓█████████▓▓▓█▒▒▒▒▒▒▒▒▒▒█▓▓██▀▀▀▒▒▒▀▄▄█▀▒▒▒▒▒▒▒▒▒▒▒▀▀▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
+
+        </textarea>
+        <button onclick="copyText('textArea20')">Copy</button>
+    </div>  <div class="container">
+        <h3>CAT</h3>
+        <textarea id="textArea27" readonly>
+░░░░█░░░░░░░█░░░░░░░░░░░░░░░░█░█░░░░░█░█░░░░░░░░██░░░░░█░░█████░░█░░░░░░░█░░█░░░█░░░░░░░░░░░█░░░░░░█░░█░░░█░░█░░░█░░░░█░░░░░░█░░█░░█░░░░░█░░░░░░░███░░░█░██░░█░░░░█░█░░░░░░░░░█░█░░█░░░█░░░░░░░░░░░░░░░░░██░█░░░░█░░░░░░░░░░░░░░░░░░░░█░░░░█░░░░░░░░░░░░░░░░░░░█░░░░░░█░░░░░░░░░░░░░░░░░█░░░░░░░░█░░██░░████░░██░█░░░░░░░░░░██░░██░░░░██░░██░░░░░░
+
+        </textarea>
+        <button onclick="copyText('textArea21')">Copy</button>
+    </div>  <div class="container">
+        <h3>BATMAN</h3>
+        <textarea id="textArea28" readonly>
+────────█████████──────────────███▒▒▒▒▒▒▒▒▒███─────────██▒▒▒█▒▒█▒█▒▒█▒▒▒██──────█▒▒███▒▒▒███▒▒▒███▒▒█─────█▒████▒▒▒███▒▒▒████▒█────█▒███████████████████▒█───█▒███████████████████▒█───█▒███████████████████▒█────█▒██▒▒█▒▒███▒▒█▒▒██▒█─────█▒▒▒█▒▒▒▒▒█▒▒▒▒▒█▒▒▒█──────██▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒██─────────███▒▒▒▒▒▒▒▒▒███──────────────█████████─────────
+
+        </textarea>
+        <button onclick="copyText('textArea28')">Copy</button>
+    </div>  <div class="container">
+        <h3>DON'T SHOOT ME</h3>
+        <textarea id="textArea29" readonly>
+────────────────────────────────────██████────────────▐──────██▀██▀██──────▌───▐▐▐────█▄▄████▄▄█────▌▌▌─▐▐▐▐───▐█░■░██░■░█▌───▌▌▌▌▐███─▄▌▐█░░░██░░░█▌▐▄─███▌▐████▀─▐██████████▌─▀████▌▐███───▐██████████▌───███▌─███───▐████──████▌───███─────────████──████─────────────────████████───────────────────▀▀▀▀▀▀────────────────────────────────────
+
+        </textarea>
+        <button onclick="copyText('textArea29')">Copy</button>
+    </div> 
+    <div class="container">
+        <h3>BUNNY</h3>
+        <textarea id="textArea30" readonly>
+───────█▒▒▒█───█▒▒▒█─────────────█▒▒▒█───█▒▒▒█─────────────█▒▒▒█████▒▒▒█────────────█▒▒▒▒▒▒▒▒▒▒▒▒▒█──────────█▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒█─────────█▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒█─────────█▒▒▒█▒▒▒▒▒▒▒█▒▒▒█─────────█▒▒▒█▒▒▒▒▒▒▒█▒▒▒█─────────█▒▒▒░▒▒▒▒▒▒▒░▒▒▒█──────────██▒░▒▒▒█▒▒▒░▒██──────────█▒██▒▒▒▒▒▒▒▒▒██▒█────█████▒▒▒███████████▒▒▒████░░░░░███░░░░░░░░░░░███░░░░
+
+        </textarea>
+        <button onclick="copyText('textArea30')">Copy</button>
+    </div> 
+    <div class="container">
+        <h3>AMONG US</h3>
+        <textarea id="textArea31" readonly>
+░░░░░░░░░███████░░░░░░░░░░░░░░░░░░█░░░░░░░█░░░░░░░░░░░░░░░░█░░░░░░░░░█░░░░░░░░░░░░░░░█░░░███████░░░░░░░░░░░░░░░█░░█░░░███░█░░░░░░░░░░░░███░░█░░░░██░█░░░░░░░░░░░█░░█░░█░░░░░░░█░░░░░░░░░░░█░░█░░█░░░░░░░█░░░░░░░░░░░█░░█░░░███████░░░░░░░░░░░░█░░█░░░░░░░░░█░░░░░░░░░░░░█░░█░░░░░░░░░█░░░░░░░░░░░░█░░█░░░░░░░░░█░░░░░░░░░░░░█░░█░░░░░░░░░█░░░░░░░░
+
+        </textarea>
+        <button onclick="copyText('textArea31')">Copy</button>
+    </div> 
+   
+    <div class="container">
+        <h3>CRAB</h3>
+        <textarea id="textArea32" readonly>
+░░░░▄█▀▀▀░░░░░░░░▀▀▀█▄░░░░ ░░▄███▄▄░░▀▄██▄▀░░▄▄███▄░░ ░░▀██▄▄▄▄████████▄▄▄▄██▀░░ ░░░░▄▄▄▄██████████▄▄▄▄░░░░ ░░░▐▐▀▐▀░▀██████▀░▀▌▀░░░░░
+
+        </textarea>
+        <button onclick="copyText('textArea32')">Copy</button>
+    </div> 
+    <div class="container">
+        <h3>RAT</h3>
+        <textarea id="textArea33" readonly>
+░░░░░░░░░░░░░░░░░░░░░███░░░░░░░░░██░█░░░░░░░░░░█░█░░░░░░░░█░░██░░░░░░░░░░██░░░░░░░██░█░██░░░░░░█░░░█░█░░░░██░░░░░░░█░░░░░░█░░░░░░░░░░████░░░░░██░░░░░█░███░░░░░░░░░█░░░░░░█░░░░█░█░█░░░░░░░░░█░░░░░░░█░░░█░████░░░░░░░░░█░░░░░░█░░█░░░░░░░░░░░░░░░█░░░░░░█░█░░░███░░░░░░░░░░█░░░░░███░░░░░█░░░░░░░░░░███████░░░░░░░░█░░░░░░░░░░░░░░░░░░░░░░░░░█░░░
+        </textarea>
+        <button onclick="copyText('textArea33')">Copy</button>
+    </div> 
 
 
 
